tests/ui/coroutine/clone-impl-static.stderr
error[E0277]: the trait bound `{static coroutine@$DIR/clone-impl-static.rs:9:5: 9:19}: Copy` is not satisfied
  --> $DIR/clone-impl-static.rs:12:16
   |
LL |     check_copy(&gen);
   |     ---------- ^^^^ the trait `Copy` is not implemented for `{static coroutine@$DIR/clone-impl-static.rs:9:5: 9:19}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `check_copy`
  --> $DIR/clone-impl-static.rs:18:18
   |
LL | fn check_copy<T: Copy>(_x: &T) {}
   |                  ^^^^ required by this bound in `check_copy`

error[E0277]: the trait bound `{static coroutine@$DIR/clone-impl-static.rs:9:5: 9:19}: Clone` is not satisfied
  --> $DIR/clone-impl-static.rs:14:17
   |
LL |     check_clone(&gen);
   |     ----------- ^^^^ the trait `Clone` is not implemented for `{static coroutine@$DIR/clone-impl-static.rs:9:5: 9:19}`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `check_clone`
  --> $DIR/clone-impl-static.rs:19:19
   |
LL | fn check_clone<T: Clone>(_x: &T) {}
   |                   ^^^^^ required by this bound in `check_clone`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
